<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/uiToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        app:title="@string/title_new_parking_space"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvTitleNumberOfFloors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_number_of_floors"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/uiEtNumberOfFloors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtNumberOfFloors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_ex_14"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/uiTvTitleNumberOfSpace"
        app:layout_constraintEnd_toEndOf="@id/uiTvTitleNumberOfFloors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/uiTvTitleNumberOfFloors"
        app:layout_constraintTop_toBottomOf="@+id/uiTvTitleNumberOfFloors" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvTitleNumberOfSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_no_of_space_each_floor"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/uiEtNumberOfSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiEtNumberOfFloors" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtNumberOfSpace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_ex_22"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/uiBtnCreateANewSpace"
        app:layout_constraintEnd_toEndOf="@id/uiTvTitleNumberOfSpace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/uiTvTitleNumberOfSpace"
        app:layout_constraintTop_toBottomOf="@+id/uiTvTitleNumberOfSpace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uiBtnCreateANewSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/uiEtNumberOfSpace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/uiEtNumberOfSpace"
        app:layout_constraintTop_toBottomOf="@+id/uiEtNumberOfSpace" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvCouponDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/uiBtnCreateANewSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="This is a sample coupon detail text"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/uiProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiBtnCreateANewSpace" />

</androidx.constraintlayout.widget.ConstraintLayout>
