<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/uiToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="@string/title_all_ongoing_reservation"
        app:titleTextColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/uiRvAllReservation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/model_reservation_setails"
        app:layout_constraintTop_toBottomOf="@id/uiToolbar"
        app:layout_constraintBottom_toTopOf="@id/uiBtnAddANewParking"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvNoDataFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/str_no_data_yet"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uiBtnAddANewParking"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/str_park_a_vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/uiProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:layout_margin="16dp"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
