<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="16dp"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvTitleVehicleNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_vehicle_number"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvVehicleNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/uiTvTitleVehicleNumber"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="TN 0076" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvTitleVehicleType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_vehicle_type"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleVehicleNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvVehicleType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/uiTvTitleVehicleType"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleVehicleNumber"
                tools:text="Car" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvTitleFloorNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_floor_number"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleVehicleType" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvFloorNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/uiTvTitleFloorNumber"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleVehicleType"
                tools:text="3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvTitleOfferCouponApplied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_offer_coupon"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleFloorNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uiTvOfferCouponApplied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/uiTvTitleOfferCouponApplied"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleFloorNumber"
                tools:text="None" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/uiBtnDepart"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/str_depart"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uiTvTitleOfferCouponApplied" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
